@@ -1,1 +1,0 @@
-Small book of chess openings for GNU Chess.
