@@ -1,38 +1,0 @@
-# $NetBSD: Makefile,v 1.10 2004/01/20 12:15:40 agc Exp $
-
-DISTNAME=		small
-PKGNAME=		${CHESS_ENGINE}-book-${DISTNAME}-20000511
-PKGREVISION=		1
-CATEGORIES=		games
-MASTER_SITES=		ftp://ftp.cis.uab.edu/pub/hyatt/common/${DISTNAME}/
-EXTRACT_SUFX=		.zip
-
-MAINTAINER=		jlam@NetBSD.org
-COMMENT=		Chess opening book for GNU Chess (small)
-
-DEPENDS+=		gnuchess>=5.07:../../games/gnuchess
-
-CONFLICTS=		${CHESS_ENGINE}-book-*
-
-WRKSRC=			${WRKDIR}
-CHESS_ENGINE=		gnuchess
-DIST_SUBDIR=		chessbooks
-NO_CONFIGURE=		# defined
-
-PLIST_SUBST+=		CHESS_ENGINE=${CHESS_ENGINE}
-PLIST_SUBST+=		BOOK_FILE=${BOOK_FILE}
-
-BOOKDIR=		${PREFIX}/lib/${CHESS_ENGINE}
-PGN_FILE=		${DISTNAME}.txt
-BOOK_FILE=		book.dat
-
-do-build:
-	@${ECHO} "book add ${PGN_FILE}" > ${WRKSRC}/makebook.gnuchess
-	@${ECHO} "quit" >> ${WRKSRC}/makebook.gnuchess
-	@cd ${WRKSRC} && ${CAT} makebook.gnuchess | ${PREFIX}/bin/gnuchess 
-
-do-install:
-	${INSTALL_DATA_DIR} ${BOOKDIR}
-	${INSTALL_DATA} ${WRKSRC}/${BOOK_FILE} ${BOOKDIR}
-
-.include "../../mk/bsd.pkg.mk"
