@@ -1,2 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2000/10/15 01:58:18 jlam Exp $
-lib/${CHESS_ENGINE}/${BOOK_FILE}
