@@ -1,4 +1,0 @@
-$NetBSD$
-
-SHA1 (chessbooks/small.zip) = b8ad36334874e861ae80656f0803dd0c2e79a348
-Size (chessbooks/small.zip) = 160309 bytes
